<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

		<ViewFlipper
		    android:id="@+id/flipper"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:flipInterval="2000"
		    android:padding="5dp" >

				<TextView
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:gravity="center_horizontal"
				    android:text="@string/flipper_text1"
				    android:textSize="16sp" />
				
				<TextView android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:gravity="center_horizontal"
					android:textSize="16sp" android:text="@string/flipper_text2" />
				
				<TextView android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:gravity="center_horizontal"
					android:textSize="16sp" android:text="@string/flipper_text3" />
				
		</ViewFlipper>
		
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:gravity="bottom|center_horizontal"
		    android:orientation="horizontal" >

				<TableLayout
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:stretchColumns="*" >

				    <TableRow
				        android:id="@+id/tableRow1"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:orientation="horizontal" >

				        <LinearLayout
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content" >

				            <TextView
				                android:id="@+id/tvCepDescDe"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:text="@string/cep_desc_de"
				                android:textSize="18sp" />

				            <EditText
				                android:id="@+id/etCEPDe"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:layout_weight="1"
				                android:hint="@string/cep_desc_in_de"
				                android:textSize="12sp" />

				        </LinearLayout>

				        <LinearLayout
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content" >

				            <TextView
				                android:id="@+id/tvCepDescPara"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:text="@string/cep_desc_para"
				                android:textSize="18sp" />

				            <EditText
				                android:id="@+id/etCEPPara"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:layout_weight="1"
				                android:hint="@string/cep_desc_in_para"
				                android:textSize="12sp" >

				                <requestFocus />
				            </EditText>

				        </LinearLayout>

				    </TableRow>

				    <TableRow
				        android:id="@+id/tableRow2"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:orientation="horizontal" >

				        <LinearLayout
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:gravity="center_horizontal"
				            android:orientation="vertical" >

				            <TextView
				                android:id="@+id/tvDeEstado"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:text="@string/de_estado"
				                android:textSize="14sp" />

				            <TextView
				                android:id="@+id/tvDeCidade"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:text="@string/de_cidade"
				                android:textSize="14sp" />

				            <TextView
				                android:id="@+id/tvDeBairro"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:text="@string/de_bairro"
				                android:textSize="14sp" />

				            <TextView
				                android:id="@+id/tvDeLogradouro"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:text="@string/de_logradouro"
				                android:textSize="14sp" />

				            <TextView
				                android:id="@+id/tvDeComplemento"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:text="@string/de_complemento"
				                android:textSize="14sp" />
				        </LinearLayout>

				        <LinearLayout
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:gravity="center_horizontal"
				            android:orientation="vertical" >
				            
							<TextView
				                android:id="@+id/tvParaEstado"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:text="@string/de_estado"
				                android:textSize="14sp" />

				            <TextView
				                android:id="@+id/tvParaCidade"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:text="@string/de_cidade"
				                android:textSize="14sp" />

				            <TextView
				                android:id="@+id/tvParaBairro"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:text="@string/de_bairro"
				                android:textSize="14sp" />

				            <TextView
				                android:id="@+id/tvParaLogradouro"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:text="@string/de_logradouro"
				                android:textSize="14sp" />

				            <TextView
				                android:id="@+id/tvParaComplemento"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:text="@string/de_complemento"
				                android:textSize="14sp" />
				            
				        </LinearLayout>

				    </TableRow>
				</TableLayout>
				
		</LinearLayout>

		<ImageButton
		    android:id="@+id/imgBtnPesquisar"
		    android:layout_width="200dp"
		    android:layout_height="40dp"
		    android:contentDescription="@string/pesquisar_desc"
		    android:scaleType="fitCenter"
		    android:src="@drawable/search" />
		
		<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
		    
				<com.google.android.maps.MapView
				    android:id="@+id/map"
				    android:layout_width="fill_parent"
				    android:layout_height="fill_parent"
				    android:apiKey="0C-yZjOM-cCKpsbDq1RdGjK9I0P1dK3pIjcT99g"
				    android:clickable="true" />
				
		</RelativeLayout>
		
</LinearLayout>
